fixed spacing issue with tiles 	* stylized tiles

--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,12 @@
 
 a {
   text-decoration: none;
+  color: black;
   margin: 4px;
+}
+
+a:link {
+  text-decoration: none;
 }
 
 .tl-img {
@@ -81,6 +86,8 @@ a {
 
 .project-tile:hover {
   box-shadow: 0px 20px 40px -5px rgba(0, 0, 0, 0.4);
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 /* @keyframes App-logo-spin {
